# EduRobotGUI

./: .gitignore  CMakeLists.txt  README.md  ReadMeTURKCE.md  arch-ideps.sh  readme  ubuntu-ideps.sh
data/: sentences.json
src/: client_data_t.h  config.h  globals.h  main.cpp  states.h
src/audio/stt/: audio_capture.cpp  audio_capture.h
src/audio/tts/: tts_client.cpp  tts_client.h
src/chatbot/: chatbot_client.cpp  chatbot_client.h
src/database/: database_client.cpp  database_client.h
src/edurobotflow/: edu_robot.cpp  edu_robot.h
src/gui/: animator.cpp  animator.h  audio_visualizer.cpp  audio_visualizer.h  display_thread.cpp  display_thread.h
src/helpers/: env_utils.cpp  env_utils.h  text_helpers.h  translate.cpp  translate.h
src/rasa/: rasa_client.cpp  rasa_client.h
src/websocket/: websocket_client.cpp  websocket_client.h
